force-app/main/default/force-app/main/default/objects/ARMT_SnapshotRecord__c/ARMT_SnapshotRecord__c.object-meta.xml
<CustomObject>
    <label>ARMT Snapshot Record</label>
    <pluralLabel>ARMT Snapshot Records</pluralLabel>
    <nameField>
        <label>Name</label>
        <type>AutoNumber</type>
        <displayFormat>SR-{00000}</displayFormat>
    </nameField>
    <sharingModel>Private</sharingModel>
    <description>Stores individual snapshot record data associated with a migration snapshot.</description>
</CustomObject>