force-app/main/default/force-app/main/default/objects/ARMT_SnapshotRecord__c/fields/ARMT_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>ARMT_Snapshot__c</fullName>
    <label>Snapshot</label>
    <type>MasterDetail</type>
    <referenceTo>ARMT_Snapshot__c</referenceTo>
    <relationshipLabel>Snapshot Records</relationshipLabel>
    <relationshipName>Snapshot_Records</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <description>Master-detail relationship to the parent ARMT_Snapshot__c record.</description>
</CustomField>