force-app/main/default/force-app/main/default/objects/ARMT_SnapshotRecord__c/fields/Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Id__c</fullName>
    <label>Record ID</label>
    <type>Text</type>
    <length>18</length>
    <required>true</required>
</CustomField>