force-app/main/default/force-app/main/default/objects/ARMT_SnapshotRecord__c/fields/Record_JSON__c.field-meta.xml
<CustomField>
    <fullName>Record_JSON__c</fullName>
    <label>Record JSON</label>
    <type>LongTextArea</type>
    <length>131072</length>
    <required>true</required>
</CustomField>