force-app/main/default/force-app/main/default/objects/ARMT_SnapshotRecord__c/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <label>Sequence</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
    <defaultValue>1</defaultValue>
</CustomField>