force-app/main/default/force-app/main/default/objects/ARMT_SnapshotRecord__c/fields/Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Snapshot__c</fullName>
    <label>Snapshot</label>
    <type>MasterDetail</type>
    <referenceTo>ARMT_Snapshot__c</referenceTo>
    <relationshipLabel>Snapshot Records</relationshipLabel>
    <relationshipName>Snapshot_Records</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <required>true</required>
</CustomField>