force-app/main/default/force-app/main/default/objects/ARMT_SnapshotRecord__c/fields/SnapshotRecordData__c.field-meta.xml
<CustomField>
    <fullName>SnapshotRecordData__c</fullName>
    <label>Snapshot Record Data</label>
    <type>LongTextArea</type>
    <length>131072</length>
    <description>Long text field containing serialized snapshot record data.</description>
</CustomField>